--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ resilience4j:
         minimum-number-of-calls: 5
         permitted-number-of-calls-in-half-open-state: 3
         wait-duration-in-open-state: 5s
-        failure-rate-threshold: 10
+        failure-rate-threshold: 5
         record-exceptions:
-          - java.net.SocketTimeoutException
+          - java.net.ConnectException
 
