--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,12 +11,12 @@ resilience4j:
     instances:
       customers:
         register-health-indicator: true
+        automaticTransitionFromOpenToHalfOpenEnabled: true
         sliding-window-size: 10
         sliding-window-type: COUNT_BASED
         minimum-number-of-calls: 5
         permitted-number-of-calls-in-half-open-state: 3
-        wait-duration-in-open-state: 5s
-        failure-rate-threshold: 5
-        record-exceptions:
-          - java.net.ConnectException
+        wait-duration-in-open-state: 10s
+        failure-rate-threshold: 50
+        eventConsumerBufferSize: 10
 
